objects/Studio_Lab__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Address__c</fullName>
        <description>This is address of lab</description>
        <label>Lab Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Labs_Values__c</fullName>
        <description>Every new Record Created Will have a name corresponding to it in this Picklist</description>
        <inlineHelpText>Every new Record Created Will have a name corresponding to it in this Picklist</inlineHelpText>
        <label>Labs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Co-Creation 1</fullName>
                </value>
                <value>
                    <fullName>Co-Creation 2</fullName>
                </value>
                <value>
                    <fullName>Co-Creation 3</fullName>
                </value>
                <value>
                    <fullName>Den</fullName>
                </value>
                <value>
                    <fullName>Dining Room</fullName>
                </value>
                <value>
                    <fullName>Lab 1</fullName>
                </value>
                <value>
                    <fullName>Lab 2</fullName>
                </value>
                <value>
                    <fullName>Lab 3</fullName>
                </value>
                <value>
                    <fullName>Lab 4</fullName>
                </value>
                <value>
                    <fullName>Lab 5</fullName>
                </value>
                <value>
                    <fullName>Lab 6</fullName>
                </value>
                <value>
                    <fullName>Living Room</fullName>
                </value>
                <value>
                    <fullName>Maker Space</fullName>
                </value>
                <value>
                    <fullName>MTV Lab1</fullName>
                    <isActive>false</isActive>
                    <label>MTV Lab1</label>
                </value>
                <value>
                    <fullName>MTV Lab2</fullName>
                    <isActive>false</isActive>
                    <label>MTV Lab2</label>
                </value>
                <value>
                    <fullName>MTV Lab3</fullName>
                    <isActive>false</isActive>
                    <label>MTV Lab3</label>
                </value>
                <value>
                    <fullName>MTV Lab4</fullName>
                    <isActive>false</isActive>
                    <label>MTV Lab4</label>
                </value>
                <value>
                    <fullName>MTV Lab5</fullName>
                    <isActive>false</isActive>
                    <label>MTV Lab5</label>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>OffSite</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>SDG Lab1</fullName>
                    <isActive>false</isActive>
                    <label>SDG Lab1</label>
                </value>
                <value>
                    <fullName>SDG Lab2</fullName>
                </value>
                <value>
                    <fullName>SDG Lab3</fullName>
                </value>
                <value>
                    <fullName>SDG Lab4</fullName>
                </value>
                <value>
                    <fullName>SDG Lab5</fullName>
                </value>
                <value>
                    <fullName>SDG Lab6</fullName>
                    <isActive>false</isActive>
                    <label>SDG Lab6</label>
                </value>
                <value>
                    <fullName>SDG Lab7</fullName>
                    <isActive>false</isActive>
                    <label>SDG Lab7</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Mountain View</fullName>
                </value>
                <value>
                    <fullName>Non Lab Study (Remote)</fullName>
                </value>
                <value>
                    <fullName>Non Lab Study (Offsite)</fullName>
                </value>
                <value>
                    <fullName>Plano</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Study__c</fullName>
        <label>Type of Study</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Card Sorting</fullName>
                </value>
                <value>
                    <fullName>Co-Design Session</fullName>
                </value>
                <value>
                    <fullName>Concept Testing</fullName>
                </value>
                <value>
                    <fullName>Diary Study</fullName>
                </value>
                <value>
                    <fullName>Eye Tracking</fullName>
                </value>
                <value>
                    <fullName>Follow Me Home</fullName>
                </value>
                <value>
                    <fullName>Mobile Testing</fullName>
                </value>
                <value>
                    <fullName>Rapid Prototyping</fullName>
                </value>
                <value>
                    <fullName>UsabilityTesting</fullName>
                </value>
                <value>
                    <fullName>User Interviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Labs_Values__c</columns>
        <columns>Type_of_Study__c</columns>
        <columns>Location_Address__c</columns>
        <columns>Lab_Address__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>